Archive2/33/0baaa28a2f4120/output
main.cpp:20:5: error: template argument uses local type 'Enum' [-Werror,-Wlocal-type-template-args]
    isEqual(v1, v2);
    ^~~~~~~
1 error generated.
